--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,10 @@
     "default_popup": "popup.html"
   },
   "content_scripts": [ {
-      "js": [ "lib/jquery-1.4.2.min.js", "js/content_script.js" ],
-      "matches": [ "http://www.epicurious.com/*" ]
+      "js": [ "lib/jquery-1.4.2.min.js", "js/epicurious.js" ],
+      "matches": [ "http://www.epicurious.com/*" ] } , {
+      "js": [ "lib/jquery-1.4.2.min.js", "js/food.js" ],
+      "matches": [ "http://www.food.com/*" ]
    } ],
   "permissions": [
     "tabs",
