--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "gRecipes",
-  "version": "1.5",
+  "version": "1.6",
   "icons": {
     "48": "img/grecipe-48.png",
     "128": "img/grecipe-128.png"
@@ -14,21 +14,16 @@
     "default_popup": "popup.html"
   },
   "content_scripts": [ {
-      "js": [ "lib/jquery-1.4.2.min.js", "js/epicurious.js", "js/content_script.js" ],
-      "matches": [ "http://www.epicurious.com/*" ] } , {
-      "js": [ "lib/jquery-1.4.2.min.js", "js/food.js", "js/content_script.js" ],
-      "matches": [ "http://www.food.com/*" ] } , {
-      "js": [ "lib/jquery-1.4.2.min.js", "js/foodandwine.js", "js/content_script.js" ],
-      "matches": [ "http://www.foodandwine.com/*" ] }, {
-      "js": [ "lib/jquery-1.4.2.min.js", "js/allrecipes.js", "js/content_script.js" ],
-      "matches": [ "http://allrecipes.com/*" ]
+      "js": [ "lib/jquery-1.4.2.min.js", "js/content_script.js" ],
+      "matches": [ "http://*/*", "https://*/*"  ]
    } ],
   "permissions": [
     "tabs",
+    "http://*/*",
+    "https://*/*",
     "https://docs.google.com/feeds/*",
     "https://www.google.com/accounts/OAuthGetRequestToken",
     "https://www.google.com/accounts/OAuthAuthorizeToken",
-    "https://www.google.com/accounts/OAuthGetAccessToken",
-    "http://www.epicurious.com/*"
+    "https://www.google.com/accounts/OAuthGetAccessToken"
   ]
 }
