--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "gRecipes",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "icons": {
     "48": "img/grecipe-48.png",
     "128": "img/grecipe-128.png"
@@ -14,7 +14,7 @@
     "default_popup": "popup.html"
   },
   "content_scripts": [ {
-      "js": [ "lib/jquery-1.4.2.min.js", "js/content_script.js" ],
+      "js": [ "js/lib/jquery-1.5.min.js", "js/content_script.js" ],
       "matches": [ "http://*/*", "https://*/*"  ]
    } ],
   "permissions": [
