--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "default_popup": "popup.html"
   },
   "content_scripts": [ {
-      "js": [ "js/lib/jquery-1.5.min.js", "js/content_script.js" ],
+      "js": [ "js/lib/jquery.js", "js/content_script.js" ],
       "matches": [ "http://*/*", "https://*/*"  ]
    } ],
   "permissions": [
